--- a/style.css
+++ b/style.css
@@ -8,7 +8,6 @@ body {
     justify-content: center;
     align-items: center;
     height: 100vh;
-    background-color: #f4f4f4;
     background: url(./Background1.jpg) no-repeat center center/cover;
 }
 
@@ -63,6 +62,14 @@ nav {
     background-color: rgba(255, 255, 255, 0.5);
     box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.4);
     width: 100%;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 1000;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0 20px;
 }
 
 nav ul {
@@ -70,6 +77,7 @@ nav ul {
     display: flex;
     justify-content: flex-end;
     align-items: center;
+    margin: 0;
 }
 
 nav li {
@@ -78,7 +86,7 @@ nav li {
 
 nav a {
     height: 100%;
-    padding: 0 30px;
+    padding: 0 20px;
     text-decoration: none;
     display: flex;
     align-items: center;
@@ -123,16 +131,36 @@ nav li:first-child {
 /* Menu Button Styles */
 .menuButton {
     display: none;
+    cursor: pointer;
+    padding: 10px;
+    background-color: rgba(255, 255, 255, 0.5);
+    border-radius: 5px;
+}
+
+.menuButton div {
+    width: 25px;
+    height: 3px;
+    background-color: black;
+    margin: 4px 0;
+    transition: 0.4s;
 }
 
 /* Media Queries */
 @media (max-width: 800px) {
-    .hideOnmobile {
+    .hideOnMobile {
         display: none;
     }
 
     .menuButton {
+        display: block;
+    }
+
+    .sidebar {
         display: flex;
+    }
+
+    nav ul {
+        display: none;
     }
 }
 
@@ -141,11 +169,11 @@ nav li:first-child {
         width: 100%;
     }
 
-    .hideOnmobile {
+    .hideOnMobile {
         display: none;
     }
 
     .menuButton {
-        display: flex;
+        display: block;
     }
 }
